--- a/parallelization.html
+++ b/parallelization.html
@@ -372,7 +372,7 @@ time &lt;- toc()
 ```
 
 ```
-## 117.289 sec elapsed
+## 101.327 sec elapsed
 ```
 
 ```r
@@ -398,7 +398,7 @@ time &lt;- toc()
 ```
 
 ```
-## 52.169 sec elapsed
+## 53.856 sec elapsed
 ```
 
 ```r
@@ -426,7 +426,7 @@ time &lt;- toc()
 ```
 
 ```
-## 49.179 sec elapsed
+## 49.93 sec elapsed
 ```
 
 ```r
@@ -447,15 +447,15 @@ times
 ```
 ## $serial_feols
 ## elapsed 
-## 117.289 
+## 101.327 
 ## 
 ## $dopar_feols
 ## elapsed 
-##  52.169 
+##  53.856 
 ## 
 ## $furrr_feols
 ## elapsed 
-##  49.179
+##   49.93
 ```
 
 Parallelization across 2 cores gets almost exactly 2x speed up
@@ -491,8 +491,8 @@ bind_rows(serial_feols, dopar_feols, furrr_feols) %&gt;%
 ## # A tibble: 3 x 2
 ##   type   `sd(value)`
 ##   &lt;chr&gt;        &lt;dbl&gt;
-## 1 dopar        0.247
-## 2 furrr        0.224
+## 1 dopar        0.226
+## 2 furrr        0.239
 ## 3 serial       0.236
 ```
 
@@ -683,26 +683,26 @@ estimates_serial = Vector{Float64}(undef, N)
 
 ```
 ## 200-element Array{Float64,1}:
-##  8.0e-323
-##  1.1e-322
-##  2.341884023e-314
-##  2.34188426e-314
-##  1.14e-322
-##  1.53e-322
-##  2.3418843074e-314
-##  2.341884402e-314
-##  1.6e-322
-##  1.6e-322
+##  7.85138442677e-313
+##  8.487983181e-314
+##  9.12458190135e-313
+##  1.039777937805e-312
+##  1.08221785364e-312
+##  8.487983183e-314
+##  8.487983166e-314
+##  1.31563739069e-312
+##  1.4641770961e-312
+##  1.54905692775e-312
 ##  ⋮
-##  2.33369394e-314
-##  3.0e-323
-##  3.0e-323
-##  2.3336939796e-314
-##  2.333694019e-314
-##  3.46e-322
-##  3.75e-322
-##  2.3337584216e-314
-##  2.333758382e-314
+##  1.5e-323
+##  4.74e-322
+##  1.5e-323
+##  4.8e-322
+##  1.5e-323
+##  4.64e-322
+##  4.64e-322
+##  4.4e-322
+##  4.4e-322
 ```
 
 ```julia
@@ -780,7 +780,7 @@ end
 ```
 
 ```
-## 100.018320 seconds (24.58 M allocations: 6.040 GiB, 1.03% gc time)
+##  83.125242 seconds (24.58 M allocations: 6.040 GiB, 1.30% gc time)
 ```
 
 
@@ -796,31 +796,31 @@ First lets use `pmap` to do load-balancing
 ```
 
 ```
-##  72.190139 seconds (91.90 k allocations: 4.361 MiB)
+##  83.641638 seconds (91.90 k allocations: 4.361 MiB)
 ```
 
 ```
 ## 200-element Array{Float64,1}:
-##  -1.7862772250667036
-##  -2.0121505662903134
-##  -1.6061433487039758
-##  -1.5018495318427947
-##  -1.7962719780203111
-##  -1.1038561258574844
-##  -1.9756343074854126
-##  -1.7687836937132388
-##  -2.149461056655686
-##  -2.2679266159211244
+##  -1.4937577825341875
+##  -1.8060739464891322
+##  -2.0008244359390037
+##  -2.04720232085125
+##  -2.108315487860598
+##  -1.9478042301684217
+##  -1.893527709363631
+##  -1.864192063549577
+##  -1.7807967421686677
+##  -1.6740688665267969
 ##   ⋮
-##  -1.7170849833937234
-##  -1.7863593682159598
-##  -1.7631174794262736
-##  -1.753801211384528
-##  -1.7921705734131506
-##  -2.2044695897575823
-##  -2.0072834023582256
-##  -1.920444826009764
-##  -1.6222899401297937
+##  -1.5472486974498683
+##  -2.0372254099407288
+##  -1.7536129616492335
+##  -2.0123926162507093
+##  -1.6611045662504702
+##  -1.7025102863085022
+##  -1.6536189809149595
+##  -1.6296410998199775
+##  -1.6739840921179572
 ```
 
 
@@ -838,11 +838,14 @@ end
 ```
 
 ```
-##  69.590584 seconds (160.94 k allocations: 8.133 MiB)
+##       From worker 2:	
+Demeaning Variables... 75%|█████████████████████▊       |  ETA: 0:00:00[K
+Demeaning Variables...100%|█████████████████████████████| Time: 0:00:01[K
+## 115.439315 seconds (161.00 k allocations: 8.321 MiB)
 ```
 
 ```
-## Task (done) @0x0000000138c1a410
+## Task (done) @0x00000001418f5d50
 ```
 
 
@@ -862,8 +865,8 @@ describe(results, :standard_deviation =&gt; std)
 ## │     │ Symbol   │ Float64            │
 ## ├─────┼──────────┼────────────────────┤
 ## │ 1   │ serial   │ 0.257461           │
-## │ 2   │ pmap     │ 0.223527           │
-## │ 3   │ distrib  │ 0.241776           │
+## │ 2   │ pmap     │ 0.241915           │
+## │ 3   │ distrib  │ 0.235289           │
 ```
 
 --
